fix color in dark mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -654,6 +654,56 @@ footer.sticky-bottom {
   }
 }
 
+// Teaching, same as the projects
+.teaching {
+  a {
+    text-decoration: none;
+
+    &:hover {
+      .card-title {
+        color: var(--global-theme-color);
+      }
+    }
+  }
+
+  .card {
+    img {
+      width: 100%;
+    }
+    background-color: var(--global-bg-color);
+    .card-title {
+      // color: $black-color;
+      color: var(--global-text-color);
+    }
+    .card-text {
+      color: var(--global-text-color);
+    }
+  }
+
+  .card-item {
+    width: auto;
+    margin-bottom: 10px;
+
+    .row {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  .grid-item {
+    width: 250px;
+    margin-bottom: 10px;
+  }
+
+  h2.category {
+    color: var(--global-divider-color);
+    border-bottom: 1px solid var(--global-divider-color);
+    padding-top: 0.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: right;
+  }
+}
 // Publications
 
 .publications {
